# Building_A_Tower_Arm_Robot

./: README.md
install/: local_setup.sh  setup.sh
install/advrobotics_lab3_interfaces/share/advrobotics_lab3_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/advrobotics_lab3_interfaces/share/advrobotics_lab3_interfaces/cmake/: advrobotics_lab3_interfacesConfig.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_cExport-noconfig.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_cExport.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_cppExport.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_introspection_cExport.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  advrobotics_lab3_interfaces__rosidl_typesupport_introspection_cppExport.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_advrobotics_lab3_interfaces__rosidl_generator_cExport-noconfig.cmake  (+11 more)
install/advrobotics_lab3_ros2/share/advrobotics_lab3_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/advrobotics_lab3_interfaces/: CMakeLists.txt  LICENSE  README.md
src/advrobotics_lab3_interfaces/msg/: Gripper.msg  Joints.msg
src/advrobotics_lab3_ros2/: CMakeLists.txt  LICENSE  README.md  package.xml
src/advrobotics_lab3_ros2/include/: Kinematics.h
src/advrobotics_lab3_ros2/include/toolkit-dynamixel/: DynamixelHandler.h
src/advrobotics_lab3_ros2/src/: PoppyDriver.cpp  build_tower.cpp  ik_client.cpp  ik_server.cpp
(+63 files in other folders)
